[metadata]
name = vera-core
version = 1.2.6
description = VERACore let you visualize and interpret the output data from VERA codes
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware Inc.
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame>=2.0.0rc2
    h5py
    pandas
    plotly
    trame-grid-layout
    vtk

[options.entry_points]
console_scripts =
    vera-core = vera_core.app:main
jupyter_serverproxy_servers =
    vera-core = vera_core.app.jupyter:jupyter_proxy_info

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
